--- a/about.html
+++ b/about.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="fontawesome-free-6.5.1-web/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+    <link rel="shortcut icon" href="favicon.png">
     <title>About Us</title>
 </head>
 <body>
-    <header>
-        <h1>Blogster</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+    <header class="bg-dark text-white py-3">
+        <div class="container">
+            <h1 class="text-white">About Us</h1>
+            <nav>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item active"><a href="about.html">About</a></li>
+                    <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <div id="header-container"></div>
     <script src="common-header.js"></script>
@@ -25,25 +29,29 @@
 
     <main>
         <section class="about-section">
+            <div class="container">
             <div class="profile-container">
                 <img src="profile-picture.jpg" alt="Your Profile Picture">
             </div>
             <div class="text-container">
-                <h2>About Us</h2>
+                <h2>Developer</h2>
                 <p>As a web developer, I am a skilled professional dedicated to crafting, enhancing, and maintaining websites. My expertise lies in proficiently using programming 
                     languages like HTML, CSS, and JavaScript, along with a deep understanding of various frameworks and libraries.</p>
-                <p>Follow us on social media to stay updated:</p>
+                <p>Follow me on social media to stay updated:</p>
                 <ul class="social-links">
                     <li><a href="https://web.facebook.com/neildaive" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/DaiveNeil" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="https://www.instagram.com/neildaive/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
+        </div>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Your Blog. All rights reserved.</p>
+    <footer class="bg-dark text-white py-3">
+        <div class="container text-center">
+            <p>&copy; 2024 Blogster. All rights reserved.</p>
+        </div>
     </footer>
 
     document.addEventListener("DOMContentLoaded", function () {
