--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+    <link rel="shortcut icon" href="favicon.png">
     <title>Contact Us</title>
 </head>
 <body>
-    <header>
-        <h1>Contact Us</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+    <header class="bg-dark text-white py-3">
+        <div class="container">
+            <h1 class="text-white">Bohol's Best Tourist Spots</h1>
+            <nav>
+                <ul class="list-inline">
+                  <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="about.html">About</a></li>
+                    <li class="list-inline-item active"><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
+        <div class="container">
         <section>
             <h2>Contact Us</h2>
             <p>Use the form below to get in touch with us:</p>
@@ -36,11 +42,14 @@
 
                 <button type="submit">Submit</button>
             </form>
+        </div>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Your Blog. All rights reserved.</p>
+    <footer class="bg-dark text-white py-3">
+        <div class="container text-center">
+            <p>&copy; 2024 Blogster. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
